RESOLVED FIXED14879
REGRESSION: First item in select (pop-up menu) is displayed even if another item was selected via JavaScript
https://bugs.webkit.org/show_bug.cgi?id=14879
Summary REGRESSION: First item in select (pop-up menu) is displayed even if another i...
mitz
Reported 2007-08-03 14:26:42 PDT
See bug 14362 comment #8 and attachment 15792 [details]. I am going to attach the patch to this bug.
Attachments
Let setChanged() be called under setSelected() (12.60 KB, patch)
2007-08-03 14:34 PDT, mitz
adele: review+
mitz
Comment 1 2007-08-03 14:34:34 PDT
Created attachment 15832 [details] Let setChanged() be called under setSelected() Includes change logs and a layout test.
David Kilzer (:ddkilzer)
Comment 2 2007-08-03 14:46:44 PDT
Thanks Mitz!! <rdar://problem/5380342>
Adele Peterson
Comment 3 2007-08-03 15:19:24 PDT
Committed revision 24857.
Note You need to log in before you can comment on or make changes to this bug.