LayoutTests:

Reviewed by Adele.

        - test for http://bugs.webkit.org/show_bug.cgi?id=14879
          REGRESSION: First item in select (pop-up menu) is displayed even if another item was selected via JavaScript

        * fast/forms/menulist-deselect-update-expected.checksum: Added.
        * fast/forms/menulist-deselect-update-expected.png: Added.
        * fast/forms/menulist-deselect-update-expected.txt: Added.
        * fast/forms/menulist-deselect-update.html: Added.

WebCore:

        Reviewed by Adele.

        - fix http://bugs.webkit.org/show_bug.cgi?id=14879
          REGRESSION: First item in select (pop-up menu) is displayed even if another item was selected via JavaScript

        Test: fast/forms/menulist-deselect-update.html

        * html/HTMLOptionElement.cpp:
        (WebCore::HTMLOptionElement::setSelected): Reordered to allow setSelectedIndex() to call setChanged().



Canonical link: https://commits.webkit.org/19433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24857 268f45cc-cd09-0410-ab3c-d52691b4dbfc